--- a/T-Shop.Client.MVC/Views/Product/Index.cshtml
+++ b/T-Shop.Client.MVC/Views/Product/Index.cshtml
@@ -6,30 +6,6 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-
-<!-- Modal Search Start -->
-<div class="modal fade" id="searchModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-fullscreen">
-        <div class="modal-content rounded-0">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Search by keyword</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body d-flex align-items-center">
-                <div class="input-group w-75 mx-auto d-flex">
-                    <input type="search" class="form-control p-3" placeholder="keywords" aria-describedby="search-icon-1">
-                    <span id="search-icon-1" class="input-group-text p-3"><i class="fa fa-search"></i></span>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Modal Search End -->
 <!-- Single Page Header start -->
 <div class="container-fluid page-header py-5">
     <h1 class="text-center text-white display-6">Shop</h1>
@@ -140,9 +116,7 @@
 @section Scripts{
     <script>
         function paginationProductList(pageNumber) {
-            console.log("trigger");
             var params = new URLSearchParams(window.location.search);
-            console.log(pageNumber);
             params.set('PageNumber', pageNumber);
             history.replaceState(null, '', '?' + params.toString());
 
@@ -286,12 +260,9 @@
                     data: { productId: productId },
                     success: function (response) {
                         if (response.success) {
-                            alert("Add to cart success!");
-                            // alert(response.message);
-                            // Optionally update the cart summary or other UI elements
-                            // $('#cart-summary').html('Total Items: ' + response.cart.items.length);
+                            toastR.success("Add to cart successfull!");
                         } else {
-                            alert(response.message);
+                            toastR.error("Add to cart failed!");
                         }
                     },
                     error: function () {
