--- a/T-Shop.Client.MVC/Views/MyOrder/Index.cshtml
+++ b/T-Shop.Client.MVC/Views/MyOrder/Index.cshtml
@@ -1,35 +1,108 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@using T_Shop.Shared.ViewModels.TransactionPage
+@model TransactionVM
 
+<style>
+    .project-list-table {
+        border-collapse: separate;
+        border-spacing: 0 12px
+    }
 
-<table class="table">
-    <thead>
-        <tr>
-            <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>abc</td>
-        </tr>
-        <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>abc</td>
-        </tr>
-        <tr>
-            <th scope="row">3</th>
-            <td>Larry</td>
-            <td>the Bird</td>
-            <td>abc</td>
-        </tr>
-    </tbody>
-</table>
+    .project-list-table tr {
+        background-color: #fff
+    }
+
+    .table-nowrap td, .table-nowrap th {
+        white-space: nowrap;
+    }
+
+    .table-borderless > :not(caption) > * > * {
+        border-bottom-width: 0;
+    }
+
+    .table > :not(caption) > * > * {
+        padding: 0.75rem 0.75rem;
+        background-color: var(--bs-table-bg);
+        border-bottom-width: 1px;
+        box-shadow: inset 0 0 0 9999px var(--bs-table-accent-bg);
+    }
+
+    .avatar-sm {
+        height: 2rem;
+        width: 2rem;
+    }
+
+    .rounded-circle {
+        border-radius: 50% !important;
+    }
+
+    .me-2 {
+        margin-right: 0.5rem !important;
+    }
+
+    img, svg {
+        vertical-align: middle;
+    }
+
+    a {
+        color: #3b76e1;
+        text-decoration: none;
+    }
+
+    .badge-soft-danger {
+        color: #f56e6e !important;
+        background-color: rgba(245,110,110,.1);
+    }
+
+    .badge-soft-success {
+        color: #63ad6f !important;
+        background-color: rgba(99,173,111,.1);
+    }
+
+    .badge-soft-primary {
+        color: #3b76e1 !important;
+        background-color: rgba(59,118,225,.1);
+    }
+
+    .badge-soft-info {
+        color: #57c9eb !important;
+        background-color: rgba(87,201,235,.1);
+    }
+
+    .avatar-title {
+        align-items: center;
+        background-color: #3b76e1;
+        color: #fff;
+        display: flex;
+        font-weight: 500;
+        height: 100%;
+        justify-content: center;
+        width: 100%;
+    }
+
+    .bg-soft-primary {
+        background-color: rgba(59,118,225,.25) !important;
+    }
+</style>
+<div class="container-fluid page-header py-5">
+    <h1 class="text-center text-white display-6">My Order</h1>
+</div>
+<div class="container mt-5 min-vh-100" id="transactionList">
+  @* Transaction List *@
+</div>
+
+@section Scripts{
+    <script>
+        $('#transactionList').load("/myorder/TransactionListPartial");
+
+        function paginationProductList(pageNumber) {
+            debugger;
+            var params = new URLSearchParams(window.location.search);
+            params.set('PageNumber', pageNumber);
+            history.replaceState(null, '', '?' + params.toString());
+
+            var url = '/myorder/TransactionListPartial?' + params.toString();
+            $('#transactionList').load(url);
+        }
+    </script>
+}
+                         
