--- a/T-Shop.Client.MVC/Views/Authentication/Login.cshtml
+++ b/T-Shop.Client.MVC/Views/Authentication/Login.cshtml
@@ -26,34 +26,31 @@
 
 </head>
 <body>
-    <section class="vh-100" style="background-color: #9A616D;">
+    <section class="vh-100" style="background-color: #f5f5f5">
         <div class="container py-5 h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col col-xl-10">
                     <div class="card" style="border-radius: 1rem;">
                         <div class="row g-0">
                             <div class="col-md-6 col-lg-5 d-none d-md-block">
-                                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/img1.webp"
+                                <img src="https://wlt-p-001.sitecorecontenthub.cloud/api/public/content/0fdac51ab4f14c059952cb8333c7ee51?v=67d6e3db"
                                      alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
                             </div>
                             <div class="col-md-6 col-lg-7 d-flex align-items-center">
                                 <div class="card-body p-4 p-lg-5 text-black">
                                     <form method="post" asp-action="Login">
                                         <div class="d-flex align-items-center mb-3 pb-1">
-                                            <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
-                                            <span class="h1 fw-bold mb-0">Logo</span>
+                                            <span class="h1 fw-bold mb-0">Login</span>
                                         </div>
 
                                         <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign into your account</h5>
-
-                                        <div data-mdb-input-init class="form-outline mb-4">
-                                            <input type="email" id="email" name="Email" class="form-control form-control-lg" required />
-                                            <label class="form-label" for="email">Email</label>
+                                        <p class="mb-1" style="font-size: 18px; font-weight: 500">Email:</p>
+                                        <div class="form-outline mb-4 rounded border bg-light">
+                                            <input type="email" id="email" name="Email" class="form-control form-control-lg" placeholder="Your Email" required />
                                         </div>
-
-                                        <div data-mdb-input-init class="form-outline mb-4">
-                                            <input type="password" id="password" name="Password" class="form-control form-control-lg" required/>
-                                            <label class="form-label" for="password">Password</label>
+                                        <p class="mb-1" style="font-size: 18px; font-weight: 500">Password:</p>
+                                        <div class="form-outline mb-4 rounded border bg-light">
+                                            <input type="password" id="password" name="Password" class="form-control form-control-lg" placeholder="Your Email" required />
                                         </div>
 
                                         <div class="pt-1 mb-4">
@@ -65,7 +62,7 @@
                                             Don't have an account? <a href="#!"
                                                                       style="">Register here</a>
                                         </p>
-                
+
                                     </form>
                                 </div>
                             </div>
@@ -80,3 +77,11 @@
 <!-- MDB -->
 <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.umd.min.js"></script>
+<script>
+    $(document).ready(function () {
+        var errorMessage = '@TempData["ErrorMessage"]';
+        if (errorMessage) {
+            toastr.error(errorMessage,);
+        }
+    });
+</script>
