--- a/T-Shop.Client.MVC/Views/Authentication/Login.cshtml
+++ b/T-Shop.Client.MVC/Views/Authentication/Login.cshtml
@@ -50,7 +50,7 @@
                                         </div>
                                         <p class="mb-1" style="font-size: 18px; font-weight: 500">Password:</p>
                                         <div class="form-outline mb-4 rounded border bg-light">
-                                            <input type="password" id="password" name="Password" class="form-control form-control-lg" placeholder="Your Email" required />
+                                            <input type="password" id="password" name="Password" class="form-control form-control-lg" placeholder="Your Password" required />
                                         </div>
 
                                         <div class="pt-1 mb-4">
